# reports_clickup

./: .env  DAILY_REPORTS_RU.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START_REPORTS.md  README.md  REPORT_EXAMPLE.md  pyproject.toml  requirements.txt
reports/: assessments.md
src/: __init__.py  clickup_agent.py
src/clickup_agent/: __main__.py  clickup.py  config.py  gpt.py  models.py  orchestrator.py
src/clickup_gpt_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src — копия/clickup_agent/: __init__.py  __main__.py  clickup.py  config.py  models.py  reports.py
tests/: test_clickup_client.py  test_models.py  test_reports.py  test_reports_timezone.py
