[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clickup-gpt-agent"
version = "0.1.0"
description = "Automation agent that analyzes ClickUp tasks with GPT and writes recommendations."
authors = [{name = "Codex"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.13.3",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "tenacity>=8.2.3"
]

[project.scripts]
clickup-agent = "clickup_agent.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
